# chainweaver

./: .ackrc  .brittany.conf  .ghcid  .gitattributes  .gitignore  .gitlab-ci.yml  .hlint.yaml  CHANGELOG.md  README.md  cabal.project  default.nix  devDesktop  format-code.sh  linux.nix  mac.nix  obApp.nix  ova.nix  release.nix  release.sh  static.out  virtualbox-image.nix  zeus.nix
backend/: backend.cabal
backend/sass/: _base.scss  _fonts.scss  _legacy-extra.scss  _scrollbars.scss  index.scss
backend/sass/common.blocks/: _accordion.scss  _button.scss  _checkbox-container.scss  _checkbox.scss  _code-font.scss  _empty-state.scss  _error-list.scss  _error.scss  _filter-bar.scss  _fly-in.scss  _group.scss  _heading.scss  _icon.scss  _iconGrid.scss  _input.scss  _key-details.scss  _keyset.scss  _label.scss  _labeled-input.scss  _lock-screen.scss  _main-header.scss  _main.scss  _modal.scss  _new-by-name.scss  _page.scss  _pagination.scss  _pane.scss  _popover.scss  _repl.scss  _resources.scss  _segment.scss  _select.scss  _settings.scss  _setup.scss  _sidebar.scss  _signal.scss  _signing-selector.scss  _spinner.scss  _tab-nav.scss  _tab-set.scss  (+5 more)
backend/sass/include/: _defs.scss  _manage-tokens.scss
backend/src/: Backend.hs  main.hs
backend/src-bin/: mac.hs  main.hs
backend/src/Backend/: App.hs  Devel.hs  Env.hs  Schema.hs
backend/swagger/: swagger.txt
common/: common.cabal
common/src/Common/: Api.hs  Foundation.hs  FungibleRequests.hs  GistStore.hs  Logger.hs  Modules.hs  Network.hs  OAuth.hs  Orphans.hs  RefPath.hs  Route.hs  Wallet.hs
common/src/Common/Tests/: GoldenHelper.hs
common/src/Control/Monad/: Logger.hs
common/tests/: GoldenHelper.hs  GoldenTests.hs
common/tests/golden-files/: networkname.golden.json  noderef.golden.json
common/tests/golden-outputs/: accbalance.json  noderef.json  oauth.json  pubkey.json  unfinxchaintfr.json
dep/: main.hs
desktop/: desktop.cabal  dev.ghci
desktop/mac/: main.hs
desktop/mac/Desktop/: Mac.hs
desktop/mac/cbits/: mac.m
desktop/src/: Desktop.hs
desktop/src/Desktop/: App.hs  Frontend.hs  ImportExport.hs  Linux.hs  Mac.hs  Orphans.hs  Setup.hs  SigningApi.hs  Syslog.hs  Util.hs  WalletApi.hs
desktop/src/Desktop/Crypto/: BIP.hs
desktop/src/Desktop/Storage/: File.hs  SQLite.hs
desktop/tests/: GoldenHelper.hs  GoldenTests.hs
desktop/tests/golden-files/: account-N-N-N.golden.json  account-N-N-Y.golden.json  account-N-Y-N.golden.json  account-Y-N-N.golden.json  account-Y-Y-N.golden.json  account-Y-Y-Y.golden.json  keypair-just.golden.json  someaccount-Y-N-Y.golden.json
desktop/tests/golden-outputs/: account-N-Y-Y.json  fullySpecifiedWithNativePred.json  fullySpecifiedWithQualifiedCustomPred.json  keylist.json  keypair-nothing.json
frontend/: frontend.cabal
frontend/sass/: _base.scss  _defs.scss  _flexbox.scss  _legacy.scss  index.scss
frontend/sass/common.blocks/: _accordion.scss  _button.scss  _checkbox.scss  _code-font.scss  _control-ui.scss  _error-list.scss  _error.scss  _filter-bar.scss  _header.scss  _heading.scss  _icon.scss  _input.scss  _keyset.scss  _label.scss  _labeled-input.scss  _main-header.scss  _main.scss  _modal.scss  _new-by-name.scss  _pagination.scss  _pane.scss  _repl.scss  _segment.scss  _select.scss  _signal.scss  _signing-selector.scss  _tab-nav.scss  _tab-set.scss  _table.scss  _target-selection.scss  _textarea.scss  _wallet.scss  _wysiwyg.scss
frontend/sass/include/: _controls.scss  _defs.scss
frontend/src/: Frontend.hs  KeysWallet.hs  ReplGhcjs.hs  Wallet.hs  Widgets.hs
frontend/src-bin/: main.hs
frontend/src/Frontend/: App.hs  AppCfg.hs  Backend.hs  Editor.hs  Foundation.hs  GistStore.hs  Ide.hs  JsonData.hs  KadenaAccount.hs  KadenaAddress.hs  Log.hs  Messages.hs  ModuleExplorer.hs  Network.hs  OAuth.hs  PactQueries.hs  Repl.hs  ReplGhcjs.hs  RightPanel.hs  Routes.hs  Storage.hs  Store.hs  TH.hs  TxBuilder.hs  VersionedStore.hs  Wallet.hs  WalletConnect.hs  Widgets.hs
frontend/src/Frontend/Backend/: Client.hs  NodeInfo.hs  Pact.hs  Servant.hs
frontend/src/Frontend/Crypto/: Browser.hs  Class.hs  CommonBIP.hs  Ed25519.hs  Password.hs  Signature.hs
frontend/src/Frontend/Editor/: Annotation.hs  QuickFix.hs
frontend/src/Frontend/GHCOnly/: BIP.hs  Orphans.hs  Setup.hs
frontend/src/Frontend/ModuleExplorer/: .Impl.hs.kak.aeJjAf  Example.hs  File.hs  Impl.hs  LoadedRef.hs  Module.hs  ModuleList.hs  ModuleRef.hs  RefPath.hs
frontend/src/Frontend/Network/: AccountDetails.hs  NodeInfo.hs
frontend/src/Frontend/Setup/: Browser.hs  Common.hs  ImportExport.hs  Orphans.hs  Password.hs  Setup.hs  Wallet.hs  Widgets.hs
frontend/src/Frontend/Storage/: Browser.hs  Class.hs
frontend/src/Frontend/Store/: MigrationUtils.hs  TH.hs  V0.hs  V1.hs
frontend/src/Frontend/UI/: .Transfer.hs.swn  Button.hs  Common.hs  DeploymentSettings.hs  ErrorList.hs  FormWidget.hs  Icon.hs  IconGrid.hs  JsonData.hs  KeysetWidget.hs  Modal.hs  ModuleExplorer.hs  Repl.hs  RightPanel.hs  Settings.hs  TabBar.hs  Transfer.hs  TxLogs.hs  Wallet.hs  Widgets.hs
frontend/src/Frontend/VersionedStore/: MigrationUtils.hs  TH.hs  V0.hs  V1.hs  V2.hs
frontend/src/Pact/: SigningApi.hs
frontend/src/Pact/Server/: ApiClient.hs  ApiV1Client.hs  Orphans.hs
frontend/src/Reflex/: Extended.hs
frontend/src/Reflex/Class/: Extended.hs
frontend/src/Reflex/Network/: Extended.hs
frontend/src/UI/: Wallet.hs
frontend/tests/: KadenaAddressSpec.hs  StorageSpec.hs  TestUtils.hs  main.hs
frontend/tests/Frontend/: CommandLogSpec.hs  StorageSpec.hs  StoreSpec.hs  StoreTestKey.hs  VersionedStoreSpec.hs  VersionedStoreTestKey.hs
frontend/tests/Frontend/CommandLog.files/: v0  v1
frontend/tests/Frontend/Network/: NodeInfoSpec.hs
frontend/tests/Frontend/Storage/: InMemoryStorage.hs  (+1 more)
linux/: linux.cabal
linux/src/: Linux.hs  WebKitGTK.hs
linux/src-bin/: CustomRun.hs  main.hs
mac/: mac.cabal  pact-document.icns  pact.icns
mac/cbits/: mac.m
mac/src/: Mac.hs
mac/src-bin/: mac.hs  main.hs
wallet-connect/: wallet-connect.cabal
wallet-connect/src/WalletConnect/: Common.hs  Internal.hs  Wallet.hs
(+157 files in other folders)
