name: backend
version:             1.2.0
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , obelisk-backend
               , text
               , filepath
               , pact
               , directory
               , obelisk-executable-config
               , async
               , snap
               , snap-core
               , safe
               , obelisk-route
               , dependent-sum
               , mtl
               , rhyolite-backend-db
               , rhyolite-backend
               , rhyolite-backend-snap
               , rhyolite-common
               , errors
               , crypto-api
  exposed-modules: Backend
                 , Backend.Devel
                 , Backend.Schema
                 , Backend.Env

  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , lens
               , modern-uri
               , obelisk-backend
               , obelisk-executable-config
               , obelisk-executable-config-inject
               , text
