name: backend
version:             1.5.1.2
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , bytestring
               , common
               , containers
               , data-default
               , frontend
               , obelisk-backend
               , text
               , filepath
               , pact
               , directory
               , async
               , lifted-async
               , monad-control
               , snap
               , snap-core
               , safe
               , obelisk-route
               , dependent-sum
               , mtl
               , obelisk-executable-config-lookup
               , obelisk-executable-config-inject
               , obelisk-oauth-common
               , obelisk-oauth-backend
               , text
               , case-insensitive
               , transformers
               , aeson
               , http-client
               , http-client-tls
               , hsass
               , template-haskell
               , th-utilities
  exposed-modules: Backend
                 , Backend.Devel

  ghc-options: -Wall

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , lens
               , modern-uri
               , obelisk-backend
