name: backend
version:             1.5.1.2
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , bytestring
               , common
               , containers
               , data-default
               , desktop
               , frontend
               , jsaddle
               , obelisk-backend
               , text
               , filepath
               , pact
               , directory
               , async
               , lifted-async
               , monad-control
               , reflex-dom
               , snap
               , snap-core
               , snap-server
               , safe
               , obelisk-route
               , dependent-sum
               , mtl
               , network
               , obelisk-executable-config-lookup
               , obelisk-executable-config-inject
               , obelisk-frontend
               , obelisk-oauth-common
               , obelisk-oauth-backend
               , text
               , case-insensitive
               , transformers
               , aeson
               , http-client
               , http-client-tls
               , hsass
               , template-haskell
               , th-utilities
               , wallet-connect

  exposed-modules: Backend
                 , Backend.App
                 , Backend.Devel

  ghc-options: -Wall -fno-show-valid-hole-fits

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , lens
               , modern-uri
               , obelisk-backend
