name: common
version:             1.5.1.2
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , base16-bytestring
               , aeson
               , containers
               , modern-uri
               , mtl
               , obelisk-oauth-common
               , obelisk-executable-config-lookup
               , obelisk-route
               , data-default
               , Decimal
               , kadena-signing-api
               , text
               , lens
               , newtype-generics
               , prettyprinter
               , pact
               , split
               , bytestring
               , template-haskell
               , megaparsec
               , safe
               , errors
               , unliftio
               , unordered-containers

  exposed-modules:
    Common.Api
    Common.Route
    Common.OAuth
    Common.Network
    Common.Orphans
    Common.RefPath
    Common.Foundation
    Common.Wallet

test-suite golden-tests
  type: exitcode-stdio-1.0

  other-modules: GoldenHelper

  main-is: GoldenTests.hs
  hs-source-dirs: tests
  build-depends: base
               , common
               , tasty
               , tasty-golden
               , aeson
               , pact
               , errors
               , text
               , mtl
               , bytestring