name: common
version:             1.5.1.2
cabal-version: >= 1.8
build-type: Simple
data-files: tests/golden-files/*.golden.json

library
  hs-source-dirs: src
  build-depends: base
               , base16-bytestring
               , aeson
               , containers
               , dependent-sum
               , dependent-sum-template
               , generic-deriving
               , modern-uri
               , mtl
               , obelisk-oauth-common
               , obelisk-executable-config-lookup
               , obelisk-route
               , data-default
               , Decimal
               , kadena-signing-api
               , text
               , lens
               , newtype-generics
               , prettyprinter
               , pact
               , split
               , bytestring
               , tasty
               , tasty-golden
               , template-haskell
               , megaparsec
               , safe
               , errors
               , unliftio
               , universe
               , unordered-containers
               , case-insensitive

  exposed-modules:
    Common.Api
    Common.GistStore
    Common.Route
    Common.OAuth
    Common.Network
    Common.Orphans
    Common.RefPath
    Common.Foundation
    Common.Wallet

    Common.Tests.GoldenHelper

test-suite golden-tests
  type: exitcode-stdio-1.0

  main-is: GoldenTests.hs
  hs-source-dirs: tests
  build-depends: base
               , common
               , tasty
               , tasty-golden
               , aeson
               , pact
               , errors
               , text
               , mtl
               , bytestring
