name: desktop
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      base
    , backend
    , common
    , frontend

    , aeson
    , aeson-gadt-th
    , async
    , base16-bytestring
    , bimap
    , bytestring
    , cardano-crypto
    , constraints-extras
    , containers
    , cryptonite
    , dependent-sum-template
    , directory
    , errors
    , filepath
    , free
    , ghcjs-dom
    , jsaddle
    , kadena-signing-api
    , lens
    , memory
    , mtl
    , network
    , newtype-generics
    , obelisk-backend
    , obelisk-executable-config-lookup
    , obelisk-frontend
    , obelisk-generated-static
    , obelisk-route
    , pact
    , primitive
    , process
    , raw-strings-qq
    , reflex
    , reflex-dom
    , reflex-dom-core
    , ref-tf
    , servant
    , servant-server
    , snap-server
    , text
    , time
    , universe-dependent-sum
    , wai-cors
    , warp
    , monad-logger
  exposed-modules:
      Desktop
    , Desktop.Crypto.BIP
    , Desktop.Frontend
    , Desktop.App
    , Desktop.Orphans
    , Desktop.Setup
    , Desktop.SigningApi
    , Desktop.Storage.File
    , Desktop.Util
  ghc-options: -Wall
