name: desktop
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends:
      base
    , common
    , frontend
    , aeson
    , aeson-gadt-th
    , async
    , base16-bytestring
    , bimap
    , bytestring
    , cardano-crypto
    , constraints-extras
    , containers
    , cryptonite
    , dependent-map
    , dependent-sum
    , dependent-sum-template
    , directory
    , errors
    , filepath
    , free
    , ghcjs-dom
    , hsyslog
    , kadena-signing-api
    , jsaddle
    , lens
    , memory
    , mtl
    , newtype-generics
    , obelisk-backend
    , obelisk-frontend
    , obelisk-executable-config-lookup
    , obelisk-generated-static
    , obelisk-route
    , pact
    , primitive
    , process
    , raw-strings-qq
    , reflex
    , reflex-dom
    , reflex-dom-core
    , ref-tf
    , servant
    , servant-server
    , system-locale
    , text
    , time
    , transformers
    , universe-dependent-sum
    , wai-cors
    , warp

  exposed-modules:
    Desktop.Crypto.BIP
    , Desktop.Frontend
    , Desktop.Orphans
    , Desktop.Storage.File
    , Desktop.Syslog
    , Desktop.WalletApi
  ghc-options: -Wall -fno-show-valid-hole-fits
