cabal-version: >= 1.10
name: frontend
version:             1.5.1.2
build-type: Simple
synopsis:            Frontend to the Pact smart contract language library
description:
            Pact is a transactional, database-focused, Turing-incomplete, interpreted language for smart contracts,
            logic to be deployed and executed on a blockchain/distributed ledger. For more information see
            <http://kadena.io/pact>.
homepage:            https://github.com/kadena-io/pact
bug-reports:         https://github.com/kadena-io/pact/issues
-- license:             BSD3
-- license-file:        LICENSE

library
  default-language: Haskell2010
  ghc-options: -O
  hs-source-dirs: src

  build-depends: base
               , async
               , aeson-gadt-th
               , constraints
               , unliftio
               , unliftio-core
               , ListZipper
               , aeson
               , lens-aeson
               , aeson-pretty
               , base16-bytestring
               , bound
               , bytestring
               , common
               , constraints-extras
               , containers
               , data-default
               , Decimal
               , dependent-map
               , dependent-sum
               , dependent-sum-aeson-orphans
               , dependent-sum-template
               , errors
               , exceptions
               , free
               , generic-deriving
               , ghcjs-dom
               , here
               , http-client
               , http-client-tls
               , http-types
               , jsaddle
               , keycode
               , lens
               , megaparsec
               , modern-uri
               , monoidal-containers
               , mtl
               , newtype-generics
               , obelisk-executable-config-lookup
               , obelisk-frontend
               , obelisk-generated-static
               , obelisk-oauth-common
               , obelisk-oauth-frontend
               , obelisk-route
               , pact
               , prettyprinter
               , primitive
               , random
               , reflex
               , reflex-dom
               , reflex-dom-ace
               , reflex-dom-contrib
               , ref-tf
               , safe
               , servant
               , servant-client-core
               , servant-jsaddle
               , servant-github
               , split
               , string-qq
               , template-haskell
               , text
               , these
               , these-lens
               , time
               , th-extras
               , transformers
               , trifecta
               , universe
               , unordered-containers
               , kadena-signing-api
               , base64-bytestring
               , crc
               , attoparsec
               , universe-base
               , universe-dependent-sum
               , vector
               , monad-logger
               , fast-logger
               , witherable

  exposed-modules: Frontend
                 , Frontend.ReplGhcjs
                 , Pact.Server.ApiV1Client

  ghc-options: -Wall
  default-extensions: ScopedTypeVariables
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , LambdaCase
                    , DeriveDataTypeable
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses
                    , RankNTypes
                    , StandaloneDeriving
                    , TypeFamilies
                    , TypeApplications
                    , AllowAmbiguousTypes
                    , OverloadedStrings

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  default-language: Haskell2010

  build-depends: base
               , common
               , reflex-dom
               , obelisk-generated-static
               , obelisk-frontend
               , obelisk-route
               , text
               , frontend

  --TODO: Make these ghc-options optional
  ghc-options: -threaded -O -Wall
  if os(darwin)
     ghc-options: -dynamic
  -- Can and _should_ be re-enabled once
  -- https://github.com/ghcjs/ghcjs/issues/748 is fixed. -dedupe greatly
  -- reduces closure compile time, reduces final JS size quite a bit and
  -- improves page load times:
  if impl(ghcjs)
     ghcjs-options: -dedupe
