cabal-version: >= 1.10
name: frontend
version:             1.5.1.2
build-type: Simple
synopsis:            Frontend to the Pact smart contract language library
description:
            Pact is a transactional, database-focused, Turing-incomplete, interpreted language for smart contracts,
            logic to be deployed and executed on a blockchain/distributed ledger. For more information see
            <http://kadena.io/pact>.
homepage:            https://github.com/kadena-io/pact
bug-reports:         https://github.com/kadena-io/pact/issues
-- license:             BSD3
-- license-file:        LICENSE

library
  default-language: Haskell2010
  ghc-options: -O
  hs-source-dirs: src

  build-depends: base
               , async
               , aeson-gadt-th
               , constraints
               , unliftio
               , unliftio-core
               , ListZipper
               , aeson
               , lens-aeson
               , aeson-pretty
               , base16-bytestring
               , bound
               , bytestring
               , common
               , constraints-extras
               , containers
               , data-default
               , Decimal
               , dependent-map
               , dependent-sum
               , dependent-sum-aeson-orphans
               , dependent-sum-template
               , errors
               , exceptions
               , free
               , generic-deriving
               , ghcjs-dom
               , here
               , http-client
               , http-client-tls
               , http-types
               , jsaddle
               , keycode
               , lens
               , megaparsec
               , modern-uri
               , monoidal-containers
               , mtl
               , newtype-generics
               , obelisk-executable-config-lookup
               , obelisk-frontend
               , obelisk-generated-static
               , obelisk-oauth-common
               , obelisk-oauth-frontend
               , obelisk-route
               , pact
               , prettyprinter
               , primitive
               , random
               , reflex
               , reflex-dom
               , reflex-dom-ace
               , reflex-dom-contrib
               , ref-tf
               , safe
               , servant
               , servant-client-core
               , servant-jsaddle
               , servant-github
               , split
               , string-qq
               , template-haskell
               , text
               , these
               , these-lens
               , time
               , th-extras
               , transformers
               , trifecta
               , universe
               , unordered-containers
               , kadena-signing-api
               , base64-bytestring
               , crc
               , attoparsec
               , universe-base
               , universe-dependent-sum
               , vector
               , monad-logger
               , fast-logger
               , witherable
               , system-locale
               , cassava
               , directory
               , filepath

  exposed-modules: Frontend
                 , Frontend.AppCfg
                 , Frontend.Log
                 , Frontend.Network
                 , Frontend.Network.NodeInfo
                 , Frontend.Crypto.Browser
                 , Frontend.Crypto.Class
                 , Frontend.Crypto.Ed25519
                 , Frontend.Editor
                 , Frontend.Editor.Annotation
                 , Frontend.Editor.QuickFix
                 , Frontend.Foundation
                 , Frontend.Ide
                 , Frontend.JsonData
                 , Frontend.GistStore
                 , Frontend.Messages
                 , Frontend.ModuleExplorer
                 , Frontend.ModuleExplorer.Example
                 , Frontend.ModuleExplorer.File
                 , Frontend.ModuleExplorer.Impl
                 , Frontend.ModuleExplorer.LoadedRef
                 , Frontend.ModuleExplorer.Module
                 , Frontend.ModuleExplorer.ModuleList
                 , Frontend.ModuleExplorer.ModuleRef
                 , Frontend.OAuth
                 , Frontend.Repl
                 , Frontend.ReplGhcjs
                 , Frontend.Routes
                 , Frontend.Storage
                 , Frontend.Storage.Class
                 , Frontend.Storage.Browser
                 , Frontend.UI.Button
                 , Frontend.UI.DeploymentSettings
                 , Frontend.UI.Dialogs.CallFunction
                 , Frontend.UI.Dialogs.ChangePassword
                 , Frontend.UI.Dialogs.CreateGist
                 , Frontend.UI.Dialogs.CreatedGist
                 , Frontend.UI.Dialogs.DeployConfirmation
                 , Frontend.UI.Dialogs.ExportWallet
                 , Frontend.UI.Dialogs.LogoutConfirmation
                 , Frontend.UI.Dialogs.NetworkEdit
                 , Frontend.UI.Dialogs.Receive
                 , Frontend.UI.Dialogs.Send
                 , Frontend.UI.Dialogs.Signing
                 , Frontend.UI.Dialogs.AccountDetails
                 , Frontend.UI.Dialogs.KeyDetails
                 , Frontend.UI.Dialogs.AddVanityAccount.DefineKeyset
                 , Frontend.UI.Dialogs.AddVanityAccount
                 , Frontend.UI.Dialogs.TxLogs
                 , Frontend.UI.Dialogs.WatchRequest
                 , Frontend.UI.ErrorList
                 , Frontend.UI.Icon
                 , Frontend.UI.IconGrid
                 , Frontend.UI.JsonData
                 , Frontend.UI.Modal
                 , Frontend.UI.Modal.Impl
                 , Frontend.UI.ModuleExplorer
                 , Frontend.UI.ModuleExplorer.FileDetails
                 , Frontend.UI.ModuleExplorer.ModuleDetails
                 , Frontend.UI.ModuleExplorer.ModuleList
                 , Frontend.UI.Repl
                 , Frontend.UI.RightPanel
                 , Frontend.UI.Settings
                 , Frontend.UI.TabBar
                 , Frontend.UI.Transfer
                 , Frontend.UI.Wallet
                 , Frontend.UI.Widgets
                 , Frontend.UI.Widgets.Helpers
                 , Frontend.TxBuilder
                 , Frontend.VersionedStore
                 , Frontend.VersionedStore.MigrationUtils
                 , Frontend.VersionedStore.TH
                 , Frontend.VersionedStore.V0
                 , Frontend.VersionedStore.V0.Wallet
                 , Frontend.VersionedStore.V1
                 , Frontend.Wallet
                 , Reflex.Class.Extended
                 , Reflex.Dom.ACE.Extended
                 , Reflex.Dom.Widget.Resize.Extended
                 , Reflex.Extended
                 , Reflex.Network.Extended
                 , Pact.Server.ApiClient.Helpers
                 , Pact.Server.ApiClient.V0
                 , Pact.Server.ApiClient.V1
                 , Pact.Server.ApiClient

  ghc-options: -Wall
  default-extensions: ScopedTypeVariables
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , LambdaCase
                    , DeriveDataTypeable
                    , DeriveFoldable
                    , DeriveFunctor
                    , DeriveGeneric
                    , DeriveTraversable
                    , GeneralizedNewtypeDeriving
                    , MultiParamTypeClasses
                    , RankNTypes
                    , StandaloneDeriving
                    , TypeFamilies
                    , TypeApplications
                    , AllowAmbiguousTypes
                    , OverloadedStrings

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  default-language: Haskell2010

  build-depends: base
               , common
               , reflex-dom
               , obelisk-generated-static
               , obelisk-frontend
               , obelisk-route
               , text
               , frontend

  --TODO: Make these ghc-options optional
  ghc-options: -threaded -O -Wall
  if os(darwin)
     ghc-options: -dynamic
  -- Can and _should_ be re-enabled once
  -- https://github.com/ghcjs/ghcjs/issues/748 is fixed. -dedupe greatly
  -- reduces closure compile time, reduces final JS size quite a bit and
  -- improves page load times:
  -- if impl(ghcjs)
  --   ghcjs-options: -dedupe

test-suite tests
  type: exitcode-stdio-1.0
  default-language: Haskell2010

  main-is: main.hs
  hs-source-dirs: tests
  other-modules: Frontend.CommandLogSpec
               , Frontend.Network.NodeInfoSpec
               , Frontend.Storage.InMemoryStorage
               , Frontend.Storage.InMemoryStorageSpec
               , Frontend.StorageSpec
               , Frontend.VersionedStoreSpec
               , Frontend.VersionedStoreTestKey
               , TestUtils
  build-depends: base
               , frontend
               , common
               , aeson
               , aeson-gadt-th
               , bytestring
               , containers
               , constraints
               , constraints-extras
               , dependent-map
               , dependent-sum
               , dependent-sum-template
               , directory
               , errors
               , filepath
               , free
               , hedgehog
               , kadena-signing-api
               , jsaddle
               , lens
               , modern-uri
               , mtl
               , obelisk-oauth-common
               , pact
               , pretty
               , pretty-show
               , Diff
               , text
               , time
               , tasty
               , tasty-hunit
               , tasty-hedgehog
               , universe
               , universe-dependent-sum
