name: linux
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if !os(linux) || impl(ghcjs)
    buildable: False
  build-depends:
      base
    , desktop
    , frontend
    , async
    , bytestring
    , data-default
    , jsaddle
    , jsaddle-webkit2gtk
    , filepath
    , process
    , safe
    , gi-gtk-hs

    -- These are here because of our webkit2gtk fork
    , unix
    , lens >= 4.15 && < 5
    , aeson >=0.8.0.2 && <1.5
    , directory >=1.0.0.2 && <1.4
    , gi-glib >=2.0.14 && <2.1
    , gi-gio >=2.0.14 && <2.1
    , gi-gtk >=3.0.17 && <3.1
    , gi-webkit2 >=4.0.24 && <4.1
    , gi-javascriptcore >=4.0.14 && <4.1
    , haskell-gi-base >=0.20 && <0.24
    , haskell-gi-overloading >=0.0 && < 2.0
    , jsaddle >=0.9.4.0 && <0.10
    , text >=1.2.1.3 && <1.3
    , webkit2gtk3-javascriptcore >=0.14.0.0 && <0.15

  ghc-options:
    -O -Wall

  exposed-modules:
    Linux
    WebKitGTK

executable linuxApp
  main-is: main.hs
  hs-source-dirs: src-bin
  if !os(linux) || impl(ghcjs)
    buildable: False
  build-depends:
      base
    , linux
  ghc-options:
    -threaded -O2 -Wall
